
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UINT64 ;
typedef scalar_t__ PVOID ;


 int FALSE ;
 int create_spurious_pte_to_virtual_address (int,int ) ;
 int printf (char*,int,int) ;

void overwrite_TargetAddress(UINT64 hook_address, UINT64 target_address, int target_offset) {
 UINT64 OverwriteTarget = create_spurious_pte_to_virtual_address(target_address, FALSE);
 OverwriteTarget += (target_address & 0xFFF);
 UINT64 target = (UINT64)((char *)OverwriteTarget) + target_offset;
 printf("Patch OverwriteTarget: %llx with %llx\n", target, hook_address);
 *(PVOID *)target = (PVOID)hook_address;
}
